# sglang-omni

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.html  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: CI_PERMISSIONS.json
.github/scripts/: ci_env.sh  cleanup_ci_host_cache.sh  cleanup_ci_pr_home.sh  delete_gpu_process.sh  ensure_hf_models.sh  install_flashinfer_jit_cache.sh  prepare_omni_venv.sh  run_all_wer_ci_aligned.sh  run_examples.sh  run_flaky_pytest.sh  validate_omni_ci_home.sh  validate_omni_venv_cache.sh
.github/workflows/: cancel-pr-workflow-on-merge.yaml  cleanup-pr-ci-home-on-close.yaml  omni-ci.yaml  test-examples.yaml  test-qwen3-omni-ci-v1.yaml  test-qwen3-omni-ci.yaml  test-s2pro-ci-v1.yaml  test-s2pro-ci.yaml  test-tts-ci.yaml  test.yaml
_downloads/9c6d2dd30e172995ff9466799d6f77ed/: Dockerfile
_sources/: README.md  index.rst
_sources/basic_usage/: omni_router.md  qwen3_omni.md  tts.md  tts_s2pro.md
_sources/benchmarks/: relay.md
_sources/calibration/: 20260531T064003Z-tts-report.md
_sources/cookbook/: higgs_tts.md  llada2_uni.md  ming_omni.md  moss_tts.md  moss_tts_local.md  qwen3_asr.md  qwen3_omni.md  voxtral_tts.md  whisper_asr.md
_sources/design/: gpu_radix_hash.md  refactor_rfc.md
_sources/developer_reference/: apiserver_design.md  architecture.md  communication.md  config.md  main.md  pipeline.md  profiler.md  relay_design.md  (+1 more)
basic_usage/: omni_router.html  qwen3_omni.html  tts.html  tts_s2pro.html
benchmarks/: README.md  relay.html
calibration/: 20260531T064003Z-tts-report.html
cookbook/: fishaudio_s2_pro.html  higgs_tts.html  llada2_uni.html  ming_omni.html  moss_tts.html  moss_tts_local.html  qwen3_asr.html  qwen3_omni.html  qwen3_tts.html  voxtral_tts.html  whisper_asr.html
design/: gpu_radix_hash.html  refactor_rfc.html
developer_reference/: apiserver_design.html  architecture.html  communication.html  config.html  main.html  pipeline.html  profiler.html  relay_design.html  rl_admin_control.html  tts_model_integration.html
docs/: conf.py
examples/: _launcher_mem_fraction.py  run_ming_omni_server.py  run_ming_omni_speech.py  run_ming_omni_speech_server.py  run_ming_omni_text_first.py  run_openai_llama_server.py  run_qwen3_omni_server.py  run_qwen3_omni_speech.py  run_qwen3_omni_speech_server.py  run_qwen3_omni_text_first.py  run_two_stage_llama_demo.py  three_stage_demo.py  two_stage_demo.py
get_started/: apiserver_quickstart.html  installation.html
playground/: README.md
scripts/: test_ming_tp.py
sglang_omni/: __init__.py  control_plane.py  coordinator.py  data_plane.py  scheduler.py  stage.py  types.py
sglang_omni_router/: app.py  route_metadata.py
tests/: README.md  test_code2wav_executor.py  test_code_predictor_executor.py  test_factory.py  test_mem_fraction_static.py  test_ming_config.py  test_ming_omni_vision_e2e.py  test_ming_tokenizer_loading.py  test_model_path_resolution.py  test_omni_engine.py  test_openai_api.py  test_real_code2wav_parity.py  test_s2pro_streaming.py  test_talker_error_propagation.py  test_tp_batch_serialization.py  test_tp_follower.py  test_tts_playground_client.py  test_tts_playground_streaming.py  test_tts_playground_ui.py  test_v1_talker_input.py  utils.py
(+252 files in other folders)
