[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang-omni"
version = "0.1.0"
description = "Multi-stage pipeline framework for omni models"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "pyzmq>=25.0.0",          # ZMQ messaging for control plane
    "msgpack>=1.0.0",         # Message serialization
    "numpy>=1.24.0",          # Array operations
    "pydantic>=2.0.0",        # Data validation and serialization
    "torch==2.9.1",          # PyTorch for tensor operations
    "torchvision==0.24.1",    # torchvision for vision processor
    "accelerate>=0.27.0",     # init_empty_weights for meta initialization
    "transformers<5.0",   # HF models/tokenizers
    "safetensors>=0.4.3",     # Direct weight loading
    "pillow>=10.0.0",         # Required by AutoImageProcessor
    "huggingface-hub>=0.36.0",# HF model downloads
    "fastapi>=0.110.0",       # OpenAI-compatible API adapter
    "uvicorn>=0.23.0",        # ASGI server for FastAPI
    "sglang==0.5.8",
    "nixl",
    "mooncake-transfer-engine>=0.3.0",
    "logger",
    "httpx",
    "xxhash>=3.0.0",
    "av>=16.1.0",
    "qwen-vl-utils==0.0.11",
    "numba==0.63.1",
    "librosa>=0.11.0",
    "pandas",
    "tabulate",
    "typer>=0.9.0",
    "openai==2.6.1",
    "openai-harmony==0.0.4",
    "soundfile>=0.12.0"
]

[project.optional-dependencies]
dev = [
    # Testing dependencies
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    # WER benchmark dependencies (Whisper ASR + text normalization)
    "jiwer",
    "scipy>=1.10.0",
    "openai-whisper",
]
s2pro = [
    "tiktoken",
    "hydra-core",
    "omegaconf",
    "descript-audiotools",
    "descript-audio-codec",
    "torchaudio",
    "gradio>=4.0.0",
    # flash-attn: install separately via prebuilt wheel (see install instructions below)
]
gradio = ["gradio>=4.0.0"]

[project.scripts]
sgl-omni = "sglang_omni.cli.cli:app"

[tool.uv]
override-dependencies = [
    "protobuf>=6.31.1,<7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "benchmark: performance benchmark tests (may require GPU and long runtime)",
    "docs: documentation example tests (verify documented API calls still work)",
    "s2pro_stage(name): select an in-file S2-Pro benchmark CI stage",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sglang_omni*"]

# Fish Speech S2-Pro DAC: OmegaConf YAML must ship with the wheel (not only .py).
[tool.setuptools.package-data]
"sglang_omni.models.fishaudio_s2_pro" = ["fish_speech/configs/*.yaml"]
